--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@ Tem que montar tabelas atualizadas ou criar PDF mais preciso
 
 Na planilha do BI náo tem os objetivos estrategicos
 Tem uma tabela separada com objetivos estrategicos no menu do PPA, mas seu conteudo náo tem nada a ver
+
+Fazer checkbox de quais fontes procurar (arquivos FAISS)
